[package]
name = "sp-inventory"
version = "0.1.0"
edition = "2021"
authors = ["Jaime Novoa <jaime@secure-penguin.com>"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
colored = "2.1"
futures = "0.3"
shellexpand = "3.1"
